Improve Socket.IO configuration for Vercel and add debugging endpoints

--- a/vercel.json
+++ b/vercel.json
@@ -24,8 +24,13 @@
       "dest": "server.js"
     },
     {
+      "src": "/debug",
+      "dest": "server.js"
+    },
+    {
       "src": "/(.*)",
       "dest": "server.js"
     }
-  ]
+  ],
+  "regions": ["iad1"]
 }
