--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "omegel",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "api/index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "deploy": "node deploy.js"
+    "start": "node server-local.js",
+    "dev": "nodemon server-local.js",
+    "vercel-build": "echo 'Building for Vercel'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^5.1.0",
-    "socket.io": "^4.8.1",
-    "webrtc-adapter": "^9.0.3"
+    "express": "^4.18.2",
+    "socket.io": "^4.7.2",
+    "webrtc-adapter": "^8.2.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.0.1"
   }
 }
