--- a/vercel.json
+++ b/vercel.json
@@ -2,35 +2,30 @@
   "version": 2,
   "builds": [
     {
-      "src": "server.js",
+      "src": "api/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/socket.io/(.*)",
-      "dest": "server.js"
+      "dest": "api/index.js"
     },
     {
       "src": "/api/(.*)",
-      "dest": "server.js"
+      "dest": "api/index.js"
     },
     {
       "src": "/health",
-      "dest": "server.js"
-    },
-    {
-      "src": "/status",
-      "dest": "server.js"
+      "dest": "api/index.js"
     },
     {
       "src": "/debug",
-      "dest": "server.js"
+      "dest": "api/index.js"
     },
     {
       "src": "/(.*)",
-      "dest": "server.js"
+      "dest": "api/index.js"
     }
-  ],
-  "regions": ["iad1"]
+  ]
 }
