--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.18.2",
+    "redis": "^5.8.2",
     "socket.io": "^4.7.2",
     "webrtc-adapter": "^8.2.3"
   },
