--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@supabase/supabase-js": "^2.58.0",
     "express": "^4.18.2",
-    "redis": "^5.8.2",
     "socket.io": "^4.7.2",
     "webrtc-adapter": "^8.2.3"
   },
